tests/resources/errors/errors22.ac
import std;
import std.Error;

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "test error msg";
    }
}

interface I {
    fn foo() | raises TestError;
}

struct A :: *I {
    fn foo() | raises TestError {
        std.print("foo called!");
        raise TestError{};
    }
}

fn main() {
    a: A;
    i: I* = &a;
    try i.foo();
}